--- a/style.css
+++ b/style.css
@@ -386,106 +386,6 @@ span{
    }
 }
 
-@media(max-width:768px){
-   #menu-icon{
-      display: block;
-   }
-   .navbar{
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      padding: 1rem 3%;
-      background: var(--bg-color);
-      border-top: .1rem solid rgba(0, 0, 0, .2);
-      box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
-      display: none;
-   }
-
-   .navbar.active{
-      display: block;
-   }
-   .navbar a {
-       display: block;
-       font-size: 2rem;
-       margin: 3rem 0;
-   }
-   .home{
-      flex-direction: column;
-   }
-   .home-content h3{
-      font-size: 2.6rem;
-   }
-   .home-content h1{
-      font-size: 5rem;
-   }
-   .home-img img{
-      width: 70vw;
-      margin-top: 4rem;
-   }
-   .about{
-      flex-direction: column-reverse;
-   }
-
-   .about img{
-      width: 70vw;
-      margin-top: 4rem;
-   }
-   .services h2{
-      margin-bottom: 3rem;
-   }
-
-   .portfolio h2{
-      margin-bottom: 3rem;
-   }
-
-   .portfolio-container{
-      grid-template-columns: repeat(2,1fr);
-   }
-}
-
-@media(max-width:617px){
-   .portfolio-container{
-      grid-template-columns: 1fr;
-   }
-}
-
-@media(max-width:450px){
-   html{
-      font-size: 50%;
-   }
-
-   .contact form .input-box input{
-      width: 100%;
-   }
-}
-
-@media(max-width:365px){
-   .home-img img{
-      width: 90vw;
-   }
-
-   .about-img img{
-      width: 90vw;
-   }
-
-   .footer{
-      flex-direction: column-reverse;
-   }
-
-   .footer p{
-      text-align: center;
-      margin-top: 2rem;
-   }
-}
-
-#msg{
-   color: #61b752;
-   margin-top: -10px;
-   display: block;
-}
-
-
 @media (max-width: 768px) {
    #menu-icon {
       display: block;
@@ -512,57 +412,14 @@ span{
       display: block;
       font-size: 2rem;
       margin: 1.5rem 0;
-      text-align: center;/
-   }
-}
-
-
-@media (max-width: 768px) {
-   .home-img img {
-      width: 80vw;
-   }
-
-   .about-img img {
-      width: 80vw;
-   }
-}
-
-
-@media (max-width: 365px) {
-   .footer {
-      flex-direction: column-reverse;
       text-align: center;
    }
 
-   .footer-text p {
-      margin-top: 1.5rem;
+   .home-img img, .about-img img {
+      width: 80vw; /* Combined for both classes */
    }
 }
 
-
-@media (max-width: 450px) {
-   .contact form .input-box input {
-      width: 100%;
-   }
-
-   .contact form textarea {
-      width: 100%;
-   }
-}
-
-@media (max-width: 320px) {
-   html {
-      font-size: 45%;
-   }
-
-   .home-content h1 {
-      font-size: 4.5rem;
-   }
-
-   .about-content h2 {
-      font-size: 2rem;
-   }
-}
 
 .contact {
    display: flex;
