--- a/style.css
+++ b/style.css
@@ -518,3 +518,16 @@ span{
         padding: 50px 20px;
     }
 }
+
+.navbar.active {
+    display: block;
+    background-color: #333; /* Adjust color if necessary */
+    width: 100%;
+}
+
+.navbar a {
+    display: block;
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+}
